fixed overflow view for settings dropdown, notification dropdown, friends list. added username field for settings dropdown

--- a/src/client/assets/css/style.scss
+++ b/src/client/assets/css/style.scss
@@ -87,28 +87,40 @@ body {
                 border: none;
             }
         }
+        
+        .profile-dropdown-menu {
+            width: 160px;
 
-        .profile-dropdown-menu:before {
-            position: absolute;
-            top: -7px;
-            left: 132px;
-            display: inline-block;
-            border-right: 7px solid transparent;
-            border-bottom: 7px solid #ccc;
-            border-left: 7px solid transparent;
-            border-bottom-color: rgba(0, 0, 0, 0.2);
-            content: '';
-        }
+            .username {
+                pointer-events: none;
+                border-bottom: 1px solid rgba(0,0,0,0.15);
+                overflow: hidden;
+                text-overflow: ellipsis;
+                padding: 3px 10px;
+            }
 
-        .profile-dropdown-menu:after {
-            position: absolute;
-            top: -6px;
-            left: 133px;
-            display: inline-block;
-            border-right: 6px solid transparent;
-            border-bottom: 6px solid #ffffff;
-            border-left: 6px solid transparent;
-            content: '';
+            &:before {
+                position: absolute;
+                top: -7px;
+                left: 132px;
+                display: inline-block;
+                border-right: 7px solid transparent;
+                border-bottom: 7px solid #ccc;
+                border-left: 7px solid transparent;
+                border-bottom-color: rgba(0, 0, 0, 0.2);
+                content: '';
+            }
+
+            &:after {
+                position: absolute;
+                top: -6px;
+                left: 133px;
+                display: inline-block;
+                border-right: 6px solid transparent;
+                border-bottom: 6px solid #ffffff;
+                border-left: 6px solid transparent;
+                content: '';
+            }
         }
 
         .notif-dropdown-menu:before {
@@ -174,6 +186,11 @@ body {
                     font-weight: 700;
                     float: right
                 }
+            }
+
+            .name {
+                overflow-x: hidden;
+                text-overflow: ellipsis;
             }
         }
 
@@ -309,6 +326,7 @@ body {
         background-color: rgba(219, 68, 55, 1);
         top: -40px;
         float: right;
+        margin-right: 5px;
     }
 
     .md-button:not([disabled]):hover {
@@ -505,6 +523,17 @@ md-toolbar.md-default-theme:not(.md-menu-toolbar), md-toolbar:not(.md-menu-toolb
         text-transform: none;
         padding-left: 10px;
         margin: 0px;
+    }
+
+    .friend-item {
+        width: 210px;
+        text-align: left;
+        height: 48px;
+        text-transform: none;
+        padding-left: 10px;
+        margin: 0px;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
     
     md-list-item {
